// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Extractor should convert results to manifest JSON 1`] = `
Object {
  "documents": Array [
    Object {
      "body": "query MyQuery {
  hello
}
",
      "documentEnd": Object {
        "character": 8,
        "line": 6,
      },
      "documentStart": Object {
        "character": 26,
        "line": 2,
      },
      "fileName": "main.ts",
      "fragmentName": undefined,
      "operationName": "MyQuery",
      "tag": "",
      "templateLiteralNodeEnd": Object {
        "character": 9,
        "line": 6,
      },
      "templateLiteralNodeStart": Object {
        "character": 25,
        "line": 2,
      },
      "type": "query",
    },
    Object {
      "body": "mutation Greeting {
  greeting {
    reply
  }
}
",
      "documentEnd": Object {
        "character": 8,
        "line": 13,
      },
      "documentStart": Object {
        "character": 29,
        "line": 7,
      },
      "fileName": "main.ts",
      "fragmentName": undefined,
      "operationName": "Greeting",
      "tag": "",
      "templateLiteralNodeEnd": Object {
        "character": 9,
        "line": 13,
      },
      "templateLiteralNodeStart": Object {
        "character": 28,
        "line": 7,
      },
      "type": "mutation",
    },
  ],
}
`;

exports[`Extractor should extract GraphQL documents 1`] = `
Array [
  "query MyQuery {
  hello
}
",
  "mutation Greeting {
  greeting {
    reply
  }
}
",
]
`;

exports[`Extractor should extract GraphQL documents and shrink duplicated fragments when removeDuplicatedFragments: false 1`] = `
Array [
  "fragment A on Query {
  hello
}

fragment A on Query {
  hello
}

query MyQuery {
  ...A
}
",
]
`;

exports[`Extractor should extract GraphQL documents and shrink duplicated fragments when removeDuplicatedFragments: true 1`] = `
Array [
  "fragment A on Query {
  hello
}

query MyQuery {
  ...A
}
",
]
`;

exports[`Extractor should store template resolve errors with too complex interpolation 1`] = `
Object {
  "end": 219,
  "message": "This operation or fragment has too complex interpolation to analyze.",
  "start": 207,
}
`;
